Tox tests passing for python2.7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "django-clearcache"
-version = "1.2.1"
+name = "django-clearcache-backport"
+version = "1.0.0"
 description = "Allows you to clear Django cache via admin UI or manage.py command"
-authors = ["Tim Kamanin <tim@timonweb.com>"]
-homepage = "https://timonweb.com"
-repository = "https://github.com/timonweb/django-clearcache"
+authors = ["Bernardo Duarte <bernardoeiraduarte@gmail.com>"]
+homepage = "https://github.com/bernardoduarte"
+repository = "https://github.com/bernardoduarte/django-clearcache-backport"
 license = "MIT"
 readme = "README.md"
 keywords = ["django", "cache"]
@@ -12,18 +12,14 @@ classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 2.7",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities",
     "Environment :: Web Environment",
     "Framework :: Django",
-    "Framework :: Django :: 2.2",
-    "Framework :: Django :: 3.0",
-    "Framework :: Django :: 3.1",
-    "Framework :: Django :: 3.2"
+    "Framework :: Django :: 1.10",
+    "Framework :: Django :: 1.11"
 ]
 packages = [
     { include = "clearcache" }
@@ -31,12 +27,12 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.7"
-django = ">=2.2"
+python = "^2.7"
+django = "^1.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest-django = "^3.8.0"
-pytest = "^5.3.4"
+pytest = "4.6.11"
 tox = "^3.14.3"
 
 [build-system]
